--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -4,8 +4,8 @@ This section describes output derived from the following data sources: Maritimes
 
 ### **Maritimes Research Vessel (RV) Survey**   
 
-Contact: <DFO.MAR-PED-Data-Request-Demande-de-donnes-DEP-MAR.MPO@dfo-mpo.gc.ca> 
-Last retrieved on: January 21, 2021 from Open Data <https://open.canada.ca/data/en/dataset/8ddcaeea-b806-4958-a79f-ba9ab645f53b>  
+Contact: <DFO.MAR-PED-Data-Request-Demande-de-donnes-DEP-MAR.MPO@dfo-mpo.gc.ca>   
+Last retrieved on: January 21, 2021 from Open Data <https://open.canada.ca/data/en/dataset/8ddcaeea-b806-4958-a79f-ba9ab645f53b>    
 Quality Tier: High  
 Search year: 1970-2020  
 Security level: none  
@@ -24,7 +24,7 @@ Dataset description from the Open Data record [@OpenData_MAR_RV]: The Fisheries 
 #### ***Industry Survey Database (ISDB)***  
 
 Contact: <Claire.Mussells@dfo-mpo.gc.ca>  
-Last retrieved on: 2019
+Last retrieved on: 2019    
 Quality Tier: Medium  
 Search year: 2002-2019  
 Security level: Protected B  
@@ -35,11 +35,11 @@ Without written consent, DFO is not permitted to release information or data pro
 
 #### ***The Maritime Fishery Information System (MARFIS)***  
 
-Contact: <XMARComData@dfo-mpo.gc.ca>  
-Last retrieved on: 2019
-Quality Tier: Medium  
-Search year: 2002-2019  
-Security level: Protected B  
+Contact: <XMARComData@dfo-mpo.gc.ca>    
+Last retrieved on: 2019  
+Quality Tier: Medium    
+Search year: 2002-2019    
+Security level: Protected B    
 
 The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by the Policy & Economics Branch. MARFIS contains catch and effort, quota, and licensing information for the Maritimes Region. Log information for all commercial fisheries that land within this region is associated with this data. If a Maritimes Region commercial vessel makes landings in another DFO region or outside of Canadian waters, information is not included in the MARFIS database, irrespective if that vessel originated in the Maritimes Region. The majority of catch information is related to commercial offloads. Reported information contained within MARFIS is not considered spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding) from larger-scale studies is strongly recommended. There is also more limited data related to discards and the Species At Risk data logs. Not all catch records have associated lat/long coordinates. Depending on the structure or completeness of the log, some records may not have associated geographic coordinates. However, generally all records are associated with a NAFO Division and NAFO Unit Area, even if no coordinates have been provided. Production data (<4 years old) are considered preliminary and subject to change without notice. Changes to archived data (>4 years old) may also occur but are generally limited. Ongoing qa/qc work is done on the MARFIS database, but not all errors are corrected. If you have data errors, questions, or corrections, you can send them to our data quality inbox: CDDDataQuality@dfo-mpo.gc.ca. This information about MARFIS was provided by Colin.O'Neil@dfo-mpo.gc.ca (July 2020, Policy & Economics Branch). If you are interested in including observer data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r). 
 
@@ -52,11 +52,11 @@ The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by 
 
 ### **Ocean Biodiversity Information System (OBIS)**  
 Contact: helpdesk@obis.org  
-URL: <https://obis.org/>  
-Last retrieved on: January 27 2021 from OBIS  
+URL: <https://obis.org/>    
+Last retrieved on: January 27 2021 by Gregory Puncher from OBIS  
 Quality Tier: Medium  
 Search year: 2002-2020  
-Security level: none  
+Security level: none    
 
 OBIS is a global, open-access data and information clearing-house on marine biodiversity for science, conservation, and sustainable development [@OBIS]. Their vision is to build and maintain a global alliance that collaborates with scientific communities to facilitate free and open access to, and application of, biodiversity and biogeographic data and information on marine life. OBIS searches were conducted to find additional relevant records for species listed by SARA, assessed by COSEWIC, or included in the Wild Species listing. Future iterations of this reporting tool will aim at expanding our quality checks of the OBIS database.
 
