--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -106,24 +106,29 @@ This report incorporates information from a variety of sources with differing le
 
 <br><br>
 ```{r table tiers read, echo=FALSE, cache=FALSE, include = FALSE}
-library(kableExtra)
 table_tier <- read.csv("../data/misc/table_tiers_EN.csv")
 ```
 ```{r}
-kable(table_tier,align="l",
+kable(table_tier,align="l", 
       caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.")
 ```
 
 #```{r}
-kable(table_tier, align="l",booktabs = T,   
-      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.") #%>%  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+kable(table_tier, align="l", 
+      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.") %>%  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 #```
 
 # **SEARCH RESULTS**  
 
 #### **EMPHASIS ON SPECIES LISTED BY THE <i>SPECIES AT RISK ACT</i>, ASSESSED BY THE COMMITTEE ON THE STATUS OF THE ENDANGERED WILDLIFE IN CANADA (COSEWIC) AND/OR WILD SPECIES**  
 
-_Table x. Definitions relevant for species listed by Species At Risk Act (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species listings._ 
+The following are definitions relevant for species listed by the _Species At Risk Act_ (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild Species listings:
+
+- **SARA** - The following text was obtained from the SARA website (URL below). The Species At Risk Act (SARA) was proclaimed in June 2003; it is one part of a three part Government of Canada strategy for the protection of wildlife Species At Risk. This three part strategy also includes commitments under the Accord for the Protection of Species At Risk and activities under the Habitat Stewardship Program for Species At Risk. The purposes of SARA are to prevent Canadian indigenous species, subspecies, and distinct populations from becoming extirpated or extinct, to provide for the recovery of endangered or threatened species, and encourage the management of other species to prevent them from becoming at risk. It applies to all federal lands in Canada; all wildlife species listed as being at risk; and their critical habitat. For more information on SARA visit <https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry.html> 
+
+- **COSEWIC** - The following text was obtained from the COSEWIC website (URL below): The Committee on the Status of Endangered Wildlife in Canada (COSEWIC) is an independent advisory panel to the Minister of Environment and Climate Change Canada that meets twice a year to assess the status of wildlife Species At Risk of extinction. Members are wildlife biology experts from academia, government, non-governmental organizations and the private sector responsible for designating wildlife species in danger of disappearing from Canada. COSEWIC determines the national status of wild Canadian species, subspecies, varieties or other designatable units that are suspected of being at risk of extinction or extirpation. COSEWIC uses a process based on science and Aboriginal or community knowledge to assess wildlife Species At Risk. All native mammals, birds, reptiles, amphibians, fish, arthropods, molluscs, vascular plants, mosses and lichens are included in COSEWIC's current mandate. For more information on COSEWIC visit <https://www.cosewic.ca/index.php/en-ca/>
+
+- **Wild species** - Every five years, the National General Status Working Group (NGSWG), which includes representatives from federal, provincial and territorial governments, publishes a general report on the status of wildlife species in Canada. These reports are meant to inform Canadians about the status of species in the country, to help prevent species in Canada from becoming extinct as a consequence of human activity, and to identify species that should be considered for evaluation by COSEWIC. For more information about Wild Species reports visit <https://www.wildspecies.ca/home>
 
 {{add_main_sections}}
 
