--- a/app/Rmd/report_SARA_FR.Rmd
+++ b/app/Rmd/report_SARA_FR.Rmd
@@ -1,5 +1,45 @@
-## **INFORMATION FROM NATIONAL AQUATIC SPECIES AT RISK PROGRAM**  
-**Contact:** Carolyn Bakelaar  
-**URL:** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#> 
+## **RENSEIGNEMENTS PROVENANT DU PROGRAMME NATIONAL SUR LES ESPÈCES AQUATIQUES EN PÉRIL**    
+**Personne-ressource :** Carolyn Bakelaar  
+**Lien pour SIG Interne :** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#>  
 
-Translation and outputs under-development
+Cette section décrit les cartes de répartition par zone et d’habitat essentiel des espèces en péril. La source officielle d’information pour les espèces en péril est le Registre public des espèces en péril : https://www.canada.ca/fr/environnement-changement-climatique/services/registre-public-especes-peril.html.
+
+Le Programme des espèces en péril du MPO est responsable de l’exécution du mandat du MPO aux termes de la Loi sur les espèces en péril et constitue une source d’information faisant autorité pour les espèces aquatiques en péril.
+
+Le Programme des espèces en péril du MPO a publié des cartes de répartition par zone des espèces en péril et de leur habitat essentiel sur le portail des données ouvertes du gouvernement du Canada, et il a également élaboré des outils interactifs de cartographie nationale des espèces en péril à l’échelle interne et publique. Comme le décrit la Foire aux questions de la Carte des espèces aquatiques en péril (https://www.dfo-mpo.gc.ca/species-especes/sara-lep/map-carte/index-fra.html), le Programme des espèces en péril à l’ACN a créé l’outil pour faciliter l’évaluation des projets en vertu de la Loi sur les pêches et de la LEP. Il utilise un système d’information géographique (SIG) et l’affichage interactif de données reproductibles et référencées spatialement pour les espèces aquatiques inscrites en vertu de la LEP. Les données contenues dans l’outil sont conservées par les bureaux régionaux du programme de la LEP, sous la coordination du Programme des espèces en péril de l’ACN (Comité directeur). Les données sont ajoutées de concert avec les plans de rétablissement et les calendriers d’inscription à la LEP. 
+
+Ce rapport ne fait pas autorité en ce qui concerne les données sur les espèces en péril. Veuillez accéder au SIG des espèces en péril pour créer un rapport faisant autorité, particulièrement si l’une des sources de données se trouve dans la zone de recherche ou à proximité.
+Vous trouverez ci-dessous une liste et un examen des produits de données qui peuvent chevaucher la zone de recherche définie par l’utilisateur.
+
+### **Données sur la répartition et l’habitat essentiel des espèces en péril**    
+
+#### ***Répartition des espèces en péril du MPO*** {-}    
+
+Personne-ressource : <info@dfo-mpo.gc.ca>  
+Lien : <https://ouvert.canada.ca/data/fr/dataset/e0fabad5-9379-4077-87b9-5705f28c490b> Consulté le : 1er octobre 2020 sur le Portail de données ouvertes  
+Niveau de qualité : Élevée 
+Niveau de sécurité : Aucun
+
+Description de l’ensemble de données (tirée du dossier des données ouvertes) : Le Programme des espèces en péril est responsable du mandat du MPO issu de la Loi sur les espèces en péril (LEP) afin d’assurer la protection, le rétablissement et la conservation de toutes les espèces aquatiques en péril inscrites au Canada. Cette base de données spatiales a été élaborée dans le cadre de ce mandat afin d’indiquer les zones où des espèces aquatiques inscrites en vertu de la LEP peuvent se trouver. Les polygones des différentes zones de répartition ont été établis par les biologistes régionaux à l’aide de la meilleure information disponible, notamment les rapports de situation du COSEPAC, les évaluations du potentiel de rétablissement, les ouvrages universitaires et les avis d’experts. Ces données spatiales contribuent à la protection, au rétablissement et à la conservation des espèces inscrites comme étant en voie de disparition, menacées ou préoccupantes aux termes de la LEP. Les zones de répartition des espèces sont également décrites et illustrées dans les stratégies de rétablissement, les plans d’action ou les plans de gestion. Il peut y avoir des écarts entre les données de répartition indiquées dans les documents de la LEP relatifs au rétablissement et les données spatiales actuelles disponibles par l’entremise du SIG; veuillez communiquer avec le MPO pour obtenir de plus amples renseignements sur les écarts de données.
+
+#### ***Habitat essentiel des espèces en péril***    
+
+Personne-ressource : <info@dfo-mpo.gc.ca>
+Lien : <https://ouvert.canada.ca/data/fr/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>
+Consulté le : 1er octobre 2020 sur le Portail de données ouvertes  
+Niveau de qualité : Élevée    
+Niveau de sécurité : Aucun
+
+Description de l’ensemble de données (tirée du dossier des données ouvertes) : Le Programme des espèces en péril consiste à réaliser le mandat du MPO en vertu de la Loi sur les espèces en péril (LEP) afin d’assurer la protection, le rétablissement et la conservation de toutes les espèces aquatiques en péril inscrites au Canada. On a déterminé l'habitat essentiel pour les espèces inscrites comme étant en voie de disparition ou menacées en vertu de la LEP. Selon la définition de l'article 2 de la LEP, l'habitat essentiel est en fait « l'habitat nécessaire à la survie ou au rétablissement d'une espèce sauvage inscrite, qui est désigné comme tel dans un programme de rétablissement ou un plan d'action élaboré à l'égard de l'espèce ». L'alinéa 49(1)a) de la LEP stipule que le plan d’action ou la stratégie de rétablissement comporte la désignation de l’habitat essentiel de l’espèce dans la mesure du possible, en se fondant sur la meilleure information accessible, notamment l’information fournie par le Comité sur la situation des espèces en péril au Canada (COSEPAC). La LEP stipule également qu'il est illégal de détruire toute partie de l'habitat essentiel d'une espèce en péril et peut imposer des restrictions sur l'aménagement et de la construction.Les habitats essentiel ont été assemblés par des biologistes régionaux et des équipes de rétablissement affectés à la mise en œuvre de la LEP. Ils ont pour but de soutenir la protection et le rétablissement des espèces inscrites comme étant en voie de disparition ou menacées conformément à la LEP. Ils sont également décrits et affichés dans les documents et les plans d’action sur le rétablissement de ces espèces.
+
+Les habitats essentiels présentés dans cette section sont disponibles sur le portail de données ouvertes du gouvernement du Canada, à l’exception de l’habitat essentiel de la tortue luth, pour laquelle la délimitation de l’habitat essentiel est actuellement à l’étude. L’ébauche de l’habitat essentiel de la tortue luth est disponible dans le SIG interne des espèces en péril et sera disponible sur le Portail de données ouvertes plus tard.
+
+#### ***Répartition des espèces en péril et résultats des recherches sur l’habitat essentiel propres à une zone***
+
+**under-development**
+
+```{r, fig.height=6, fig.width=11, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with distribution (range) of Species At Risk listed as Endangered, Threatened or Special Concern under the <i>Species At Risk Act</i>. This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative SARA report.'}
+```
+
+```{r, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with critical habitat of Species At Risk listed as Endangered or Threatened under the <i>Species At Risk Act</i> (SARA). Critical habitat is defined under section 2 of SARA as: “the habitat that is necessary for the survival or recovery of a listed wildlife species and that is identified as the species’ critical habitat in the recovery strategy or in an action plan for the species”. Critical Habitat is identified in a species’ recovery strategy or action plan, posted on the [SAR Public Registry](http://www.sararegistry.gc.ca). This is not the authoritative source or advice for Species At Risk data. Please access the Species At Risk [GIS tool](http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US) to create an authoritative report.', fig.height=6, fig.width=11}
+```
